[package]
name = "tcs-consensus"
version = "0.1.0"
edition = "2024"
authors = ["Jason Van Pham <jasonvanpham@niodoo.com>"]
description = "Consensus and vocabulary evolution mechanisms for the Topological Cognitive System. Developed in collaboration with ChatGPT, Grok, Gemini, Claude, Deepseek, and Qwen."
license = "AGPL-3.0 OR Commercial"

[dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tcs-core = { path = "../tcs-core" }
