[package]
name = "tcs-core"
version = "0.1.0"
edition = "2021"
authors = ["Niodoo Topology Team <niodoo@dev>"]
description = "Core cognitive state machines and embeddings for the Topological Cognitive System"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
lru = { workspace = true }
nalgebra = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
