[package]
name = "tcs-core"
version = "0.1.0"
edition = "2024"
authors = ["Niodoo Topology Team <niodoo@dev>"]
description = "Core cognitive state machines and embeddings for the Topological Cognitive System"
license = "MIT"

[features]
default = ["tda_rust"]
tda_rust = []
tda_gudhi = []
legacy_e2e = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
candle-core.workspace = true
candle-nn.workspace = true
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
lru = { workspace = true }
nalgebra = { workspace = true }
ndarray = { workspace = true }
rand.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true }
nsga = "0.1.2"
candle-transformers = { workspace = true }
emd = "0.1.1"
prometheus = { version = "0.13", features = ["nightly"] }
axum = "0.7"
once_cell = "1.19"

[dev-dependencies]
criterion = "0.5"
plotters = { version = "0.3", features = ["ttf"] }
csv = "1.3"
proptest = "1.4"

[[bin]]
name = "metrics_server"
path = "src/bin/metrics_server.rs"
