[package]
name = "tcs-ml"
version = "0.1.0"
edition = "2021"
authors = ["Niodoo Consciousness Team <niodoo@dev>"]
description = "Machine learning components for the Topological Cognitive System"
license = "MIT"

[features]
default = []
onnx = ["dep:ort"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
ort = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
