[package]
name = "tcs-ml"
version = "0.1.0"
edition = "2021"
authors = ["Niodoo Topology Team <niodoo@dev>"]
description = "Machine learning components for the Topological Cognitive System"
license = "MIT"

[features]
default = []
onnx = ["dep:ort", "dep:half"]
tokenizers = ["dep:tokenizers"]
onnx-with-tokenizers = ["onnx", "tokenizers"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
ort = { workspace = true, optional = true }
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }
half = { version = "2.3", optional = true }
rand = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tcs-pipeline = { path = "../tcs-pipeline" }
