[package]
name = "tcs-tda"
version = "0.1.0"
edition = "2024"
authors = ["Jason Van Pham <jasonvanpham@niodoo.com>"]
description = "Topological data analysis primitives for the Topological Cognitive System. Developed in collaboration with ChatGPT, Grok, Gemini, Claude, Deepseek, and Qwen."
license = "AGPL-3.0 OR Commercial"

[dependencies]
anyhow = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tcs-core = { path = "../tcs-core" }
phlite = "0.1.0"
